# mailman

./: README.md  pyproject.toml
mailman/: mailman.py
tests/: test_mailman.py  test_serial_mailman.py
